<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MineFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mine_frag_iv_mine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_huge"
                android:src="@drawable/mine_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xxlarge"
                android:gravity="center_horizontal"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/txt_xmiddle"
                android:textStyle="bold"
                android:text="@string/event_upcoming_descritpion"/>

            <Button
                android:id="@+id/mine_frag_btn_loc"
                android:layout_width="200dp"
                android:layout_height="@dimen/height_middle"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_large"
                android:background="@drawable/border_round_yellow"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="@color/colorDGray"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_xmiddle"
                android:text="@string/pin_my_loc"/>

            <Button
                android:id="@+id/mine_frag_btn_join"
                android:layout_width="200dp"
                android:layout_height="@dimen/height_middle"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_large"
                android:background="@drawable/border_round_yellow"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="@color/colorDGray"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_xmiddle"
                android:text="@string/btn_join_event"/>

            <Button
                android:id="@+id/mine_frag_btn_host"
                android:layout_width="200dp"
                android:layout_height="@dimen/height_middle"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_large"
                android:background="@drawable/border_round_yellow"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="@color/colorDGray"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_xmiddle"
                android:text="@string/btn_host_event"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>