<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDGray"
    tools:context="com.flashhop.app.start.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/welcome_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/sourcesanspro_bold"
            android:textSize="@dimen/txt_xlarge"
            android:text="@string/welcome_to"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/sourcesanspro"
            android:textSize="@dimen/txt_middle"
            android:text="@string/welcome_question"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:weightSum="3"
            android:orientation="horizontal">
            <Button
                android:id="@+id/welcome_btn_next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:background="@drawable/border_round_yellow"
                android:textColor="@color/colorDGray"
                android:textAllCaps="false"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textSize="@dimen/txt_xmiddle"
                android:text="@string/btn_next"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>